--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li class="contacts-item list">
               <a class="adress-styles link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
-              >
+              > href=""
             </li>
           </ul>
         </address>
@@ -171,28 +171,28 @@
                 <!-- social-icon -->
                 <ul class="social list">
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -213,28 +213,28 @@
                 <p class="section-text team-text">Frontend Developer</p>
                 <ul class="social list">
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -255,28 +255,28 @@
                 <p class="section-text team-text">Marketing</p>
                 <ul class="social list">
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -298,21 +298,21 @@
                 <p class="section-text team-text">UI Designer</p>
                 <ul class="social list">
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link">
+                    <a class="social-link" href="">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -394,21 +394,21 @@
           <p class="social-media-heading">Social media</p>
           <ul class="social-footer-list list">
             <li class="social-footer-item">
-              <a class="footer-social-link">
+              <a class="footer-social-link" href="">
                 <svg width="24" height="24" class="social-icon" >
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
-              <a class="footer-social-link">
+              <a class="footer-social-link" href="">
                 <svg width="24" height="24" class="social-icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
-              <a class="footer-social-link">
+              <a class="footer-social-link" href="">
                 <svg  width="24" height="24" class="social-icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
