--- a/portfolio.html
+++ b/portfolio.html
@@ -230,28 +230,28 @@
           <p class="social-media-heading">Social media</p>
           <ul class="social-footer-list list">
             <li class="social-footer-item">
-              <a class="footer-social-link">
+              <a class="footer-social-link" href="">
                 <svg width="24" height="24" class="social-icon" >
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
-              <a class="footer-social-link">
+              <a class="footer-social-link" href="">
                 <svg width="24" height="24" class="social-icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
-              <a class="footer-social-link">
+              <a class="footer-social-link" href="">
                 <svg  width="24" height="24" class="social-icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
-              <a class="footer-social-link">
+              <a class="footer-social-link" href="">
                 <svg width="24" height="24" class="social-icon" >
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
